<resources>
    <string name="modules">Modules</string>
    <string name="downloads">Downloads</string>
    <string name="superuser">Superuser</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="install">Install</string>
    <string name="magisk_version_error">Magisk is not installed.</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="magisk_update_available">Magisk v%1$s is available!</string>
    <string name="invalid_update_channel">Invalid Update Channel</string>
    <string name="safetyNet_check_text">Tap to start SafetyNet check</string>
    <string name="checking_safetyNet_status">Checking SafetyNet status…</string>
    <string name="safetyNet_check_success">SafetyNet Check Success</string>
    <string name="safetyNet_api_error">SafetyNet API Error</string>
    <string name="safetyNet_res_invalid">The response is invalid.</string>
    <string name="magisk_up_to_date">Magisk is up to date</string>
    <string name="manager_up_to_date">Magisk Manager is up to date</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="keep_force_encryption">Preserve force encryption</string>
    <string name="keep_dm_verity">Preserve AVB 2.0/dm-verity</string>
    <string name="current_installed">Installed: %1$s</string>
    <string name="latest_version">Latest: %1$s</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_magisk_title">Uninstall Magisk</string>
    <string name="uninstall_magisk_msg">All modules will be disabled/removed. Root will be removed, and your data potentially encrypted if not already.</string>
    <string name="update">Update</string>
    <string name="core_only_enabled">(Core only mode enabled)</string>
    <string name="no_info_provided">(No info provided)</string>
    <string name="no_modules_found">No modules found.</string>
    <string name="update_file_created">Module will be updated at next reboot.</string>
    <string name="remove_file_created">Module will be removed at next reboot.</string>
    <string name="remove_file_deleted">Module will not be removed at next reboot.</string>
    <string name="disable_file_created">Module will be disabled at next reboot.</string>
    <string name="disable_file_removed">Module will be enabled at next reboot.</string>
    <string name="author">Created by %1$s</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="update_available">Update Available</string>
    <string name="installed">Installed</string>
    <string name="not_installed">Not Installed</string>
    <string name="updated_on">Updated on: %1$s</string>
    <string name="sorting_order">Sorting Order</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_update">Sort by last update</string>
    <string name="menuSaveLog">Save log</string>
    <string name="menuReload">Reload</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared.</string>
    <string name="log_is_empty">Log is empty.</string>
    <string name="about">About</string>
    <string name="app_changelog">Changelog</string>
    <string name="translators" />
    <string name="app_version">Version</string>
    <string name="app_source_code">Source code</string>
    <string name="donation">Donation</string>
    <string name="app_translators">Translators</string>
    <string name="support_thread">Support thread</string>
    <string name="follow_twitter">Follow me on Twitter</string>
    <string name="update_channel">Magisk Updates</string>
    <string name="progress_channel">Progress Notifications</string>
    <string name="download_complete">Download complete</string>
    <string name="download_file_error">Error downloading file</string>
    <string name="magisk_update_title">Magisk Update Available!</string>
    <string name="manager_update_title">Magisk Manager Update Available!</string>
    <string name="close">Close</string>
    <string name="repo_install_title">Install %1$s</string>
    <string name="repo_install_msg">Do you want to install %1$s now?</string>
    <string name="download">Download</string>
    <string name="reboot">Reboot</string>
    <string name="settings_reboot_toast">Reboot to apply settings.</string>
    <string name="release_notes">Release notes</string>
    <string name="repo_cache_cleared">Repo cache cleared</string>
    <string name="process_error">Process error</string>
    <string name="internal_storage">The zip is stored in:\n[Internal Storage]%1$s</string>
    <string name="zip_download_title">Downloading</string>
    <string name="zip_download_msg">Downloading zip file (%1$d%%) …</string>
    <string name="zip_process_title">Processing</string>
    <string name="zip_process_msg">Processing zip file…</string>
    <string name="manager_download_install">Press to download and install.</string>
    <string name="dtbo_patched_title">DTBO was patched!</string>
    <string name="dtbo_patched_reboot">Magisk Manager has patched dtbo.img. Please reboot.</string>
    <string name="flashing">Flashing</string>
    <string name="hide_manager_title">Hiding Magisk Manager…</string>
    <string name="hide_manager_msg">This might take a while.</string>
    <string name="hide_manager_fail_toast">Hide Magisk Manager failed.</string>
    <string name="open_link_failed_toast">No application found to open the link.</string>
    <string name="download_zip_only">Download Zip Only</string>
    <string name="patch_boot_file">Patch Boot Image File</string>
    <string name="direct_install">Direct Install (Recommended)</string>
    <string name="install_inactive_slot">Install to Inactive Slot (After OTA)</string>
    <string name="warning">Warning</string>
    <string name="install_inactive_slot_msg">Your device will be FORCED to boot to the current inactive slot after a reboot!\nOnly use this option after OTA is done.\nContinue?</string>
    <string name="select_method">Select Method</string>
    <string name="no_boot_file_patch_support">Target Magisk version doesn\'t support boot image file patching</string>
    <string name="boot_file_patch_msg">Select stock boot image dump in .img or .img.tar format.</string>
    <string name="complete_uninstall">Complete Uninstall</string>
    <string name="restore_img">Restore Images</string>
    <string name="restore_img_msg">Restoring…</string>
    <string name="restore_done">Restoration done!</string>
    <string name="restore_fail">Stock backup does not exist!</string>
    <string name="proprietary_title">Download Proprietary Code</string>
    <string name="proprietary_notice">Magisk Manager is FOSS and doesn\'t contain Google\'s proprietary SafetyNet API code.\n\nWill you allow Magisk Manager to download an extension (contains GoogleApiClient) for SafetyNet checks?</string>
    <string name="su_db_corrupt">SU database is corrupt. Will recreate new one</string>
    <string name="setup_done">Setup done.</string>
    <string name="setup_fail">Setup failed.</string>
    <string name="env_fix_title">Requires Additional Setup</string>
    <string name="env_fix_msg">Your device needs additional setup for Magisk to work properly. It will download the Magisk setup zip, do you want to proceed now?</string>
    <string name="setup_title">Additional Setup</string>
    <string name="setup_msg">Running environment setup…</string>
    <string name="downloading_toast">Downloading %1$s</string>
    <string name="no_rw_storage">This feature will not work without permission to write external storage.</string>
    <string name="dl_one_module">Download one module at a time.</string>
    <string name="settings_general_category">General</string>
    <string name="settings_dark_theme_title">Dark Theme</string>
    <string name="settings_dark_theme_summary">Enable dark theme.</string>
    <string name="settings_clear_cache_title">Clear Repo Cache</string>
    <string name="settings_clear_cache_summary">Clear the cached information for online repos. This forces the app to refresh online.</string>
    <string name="settings_hide_manager_title">Hide Magisk Manager</string>
    <string name="settings_hide_manager_summary">Repackage Magisk Manager with random package name.</string>
    <string name="settings_restore_manager_title">Restore Magisk Manager</string>
    <string name="settings_restore_manager_summary">Restore Magisk Manager with original package</string>
    <string name="language">Language</string>
    <string name="system_default">(System Default)</string>
    <string name="settings_update">Update Settings</string>
    <string name="settings_check_update_title">Check Updates</string>
    <string name="settings_check_update_summary">Periodically check for updates in the background.</string>
    <string name="settings_update_channel_title">Update Channel</string>
    <string name="settings_update_stable">Stable</string>
    <string name="settings_update_beta">Beta</string>
    <string name="settings_update_custom">Custom</string>
    <string name="settings_update_custom_msg">Insert a custom URL</string>
    <string name="settings_boot_format_title">Patched Boot Output Format</string>
    <string name="settings_boot_format_summary">Select the format for the output patched boot image.\nChoose .img to flash through fastboot/download mode; choose .img.tar to flash with ODIN.</string>
    <string name="settings_core_only_title">Magisk Core Only Mode</string>
    <string name="settings_core_only_summary">Enable only core features. MagiskSU and MagiskHide will still be enabled, but no modules will be loaded.</string>
    <string name="settings_magiskhide_summary">Hide Magisk from various forms of detection.</string>
    <string name="settings_hosts_title">Systemless hosts</string>
    <string name="settings_hosts_summary">Systemless hosts support for Adblock apps.</string>
    <string name="settings_hosts_toast">Added systemless hosts module</string>
    <string name="settings_su_app_adb">Apps and ADB</string>
    <string name="settings_su_app">Apps only</string>
    <string name="settings_su_adb">ADB only</string>
    <string name="settings_su_disable">Disabled</string>
    <string name="settings_su_request_10">10 seconds</string>
    <string name="settings_su_request_15">15 seconds</string>
    <string name="settings_su_request_20">20 seconds</string>
    <string name="settings_su_request_30">30 seconds</string>
    <string name="settings_su_request_45">45 seconds</string>
    <string name="settings_su_request_60">60 seconds</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="auto_response">Automatic Response</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="superuser_notification">Superuser Notification</string>
    <string name="request_timeout_summary">%1$d seconds</string>
    <string name="settings_su_reauth_title">Reauthenticate after upgrade</string>
    <string name="settings_su_reauth_summary">Reauthenticate superuser permissions after an application upgrades</string>
    <string name="settings_su_fingerprint_title">Enable Fingerprint Authentication</string>
    <string name="settings_su_fingerprint_summary">Use fingerprint scanner to allow superuser requests</string>
    <string name="auth_fingerprint">Authenticate Fingerprint</string>
    <string name="multiuser_mode">Multiuser Mode</string>
    <string name="settings_owner_only">Device Owner Only</string>
    <string name="settings_owner_manage">Device Owner Managed</string>
    <string name="pid" translatable="false">PID: %1$d</string>
    <string name="target_uid">Target UID: %1$d</string>
    <string name="command">Command: %1$s</string>
</resources>