<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/magisk"
            android:icon="@drawable/ic_magisk_outline"
            android:title="@string/magisk" />

        <item
            android:id="@+id/superuser"
            android:icon="@drawable/ic_superuser"
            android:title="@string/superuser"
            android:visible="false" />
        <item
            android:id="@+id/magiskhide"
            android:icon="@drawable/ic_magiskhide"
            android:title="@string/magiskhide" />

    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/modules"
            android:icon="@drawable/ic_extension"
            android:title="@string/modules" />

        <item
            android:id="@+id/downloads"
            android:icon="@drawable/ic_cloud_download"
            android:title="@string/downloads" />

    </group>

    <group
        android:id="@+id/third_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/log"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/log" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/forth_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/app_about"
            android:checkable="false"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/about" />

        <item
            android:id="@+id/donation"
            android:checkable="false"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/donation" />

    </group>

</menu>
