<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/flashing_background_color"
    tools:context="com.topjohnwu.magisk.FlashActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

        </HorizontalScrollView>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_panel"
        style="?android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/no_thanks"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/close" />

        <Button
            android:id="@+id/save_logs"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/menuSaveLog" />

        <Button
            android:id="@+id/reboot"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/reboot" />

    </LinearLayout>

</LinearLayout>
