<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables,ContentDescription">

        <LinearLayout
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="?attr/cardStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="72dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintBottom_toTopOf="@+id/paypal"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        app:srcCompat="@drawable/ic_logo" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <a.l
                        android:id="@+id/paypal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_paypal"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:text="PayPal" />

                    <a.l
                        android:id="@+id/patreon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_patreon"
                        app:layout_constraintTop_toBottomOf="@+id/paypal"
                        app:text="Patreon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?attr/cardStyle"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <a.l
                        android:id="@+id/app_version_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_info_outline"
                        app:text="@string/app_version"/>

                    <a.l
                        android:id="@+id/app_changelog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_history"
                        app:text="@string/app_changelog"/>

                    <a.l
                        android:id="@+id/app_translators"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_language"
                        app:text="@string/app_translators"/>

                    <a.l
                        android:id="@+id/follow_twitter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_twitter"
                        app:text="@string/follow_twitter"/>

                    <a.l
                        android:id="@+id/app_source_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_github"
                        app:text="@string/app_source_code"/>

                    <a.l
                        android:id="@+id/support_thread"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_xda"
                        app:text="@string/support_thread"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>